--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "^2.3.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.3.2"
   }
 }
